add contact and delete extra media

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,7 +3,7 @@
 {% load hitcount_tags %}
 
 {% block title %}
-    صفحه اصلی
+     main page
 {% endblock %}
 
 {% block meta %}
@@ -114,7 +114,7 @@
                  <div class="col-md-12">
                      <div class="heading-section">
                          <h2>What Customers Say</h2>
-                         <img src="images/under-heading.png" alt="" >
+                         <img src="{% static 'images/under-heading.png' %}" alt="" >
                      </div>
                  </div>
              </div>
@@ -122,24 +122,22 @@
                  <div class="col-md-8 col-md-offset-2">
                      <div class="testimonails-slider">
                        <ul class="slides">
+                        {% if comments %}
+                        {% for comment in comments %}
                          <li>
                              <div class="testimonails-content">
-                                 <p>Sed egestas tincidunt mollis. Suspendisse rhoncus vitae enim et faucibus. Ut dignissim nec arcu nec hendrerit sed arcu odio, sagittis vel diam in, malesuada malesuada risus. Aenean a sem leo. Nam ultricies dolor et mi tempor, non pulvinar felis sollicitudin.</p>
-                                 <h6>Jennifer - <a href="#">Chief Designer</a></h6>
+                                 <p>{{comment.content}}</p>
+                                 <h6>{{comment.name}} - <a href="#">{{comment.last_name}}</a></h6>
                              </div>
                          </li>
+                        {% endfor %}
+                         {% else %}
                          <li>
-                             <div class="testimonails-content">
-                                 <p>Sed egestas tincidunt mollis. Suspendisse rhoncus vitae enim et faucibus. Ut dignissim nec arcu nec hendrerit sed arcu odio, sagittis vel diam in, malesuada malesuada risus. Aenean a sem leo. Nam ultricies dolor et mi tempor, non pulvinar felis sollicitudin.</p>
-                                 <h6>Laureen - <a href="#">Marketing Executive</a></h6>
-                             </div> 
-                         </li>
-                         <li>
-                             <div class="testimonails-content">
-                                 <p>Sed egestas tincidunt mollis. Suspendisse rhoncus vitae enim et faucibus. Ut dignissim nec arcu nec hendrerit sed arcu odio, sagittis vel diam in, malesuada malesuada risus. Aenean a sem leo. Nam ultricies dolor et mi tempor, non pulvinar felis sollicitudin.</p>
-                                 <h6>Tanya - <a href="#">Creative Director</a></h6>
-                             </div>
-                         </li>
+                           <div class="testimonails-content">
+                               <h3 class="text-danger">no message available</h3>
+                           </div>
+                       </li>
+                       {% endif%}
                        </ul>
                      </div>
                  </div>
