--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,8 +5,12 @@
            <div class="row">
                <div class="col-md-6">
                    <div class="home-account">
-                       <a href="#">Home</a>
+                    {% if request.user.is_authenticated %}
                        <a href="#">My account</a>
+                       <a href="{% url 'account:logout' %}">Log out</a>
+                    {% else %}
+                    <a href="#">sign-in</a>
+                    {% endif %}
                    </div>
                </div>
                <div class="col-md-6">
@@ -23,7 +27,7 @@
            <div class="row">
                <div class="col-md-3">
                    <div class="logo">
-                       <a href="#"><img src="images/logo.png" title="Grill Template" alt="Grill Website Template" ></a>
+                       <a href="#"><img src="{% static 'images/logo2.png' %}" title="Grill Template" alt="Grill Website Template" style="width: 65px;height: 60px;"></a>
                    </div>
                </div>
                <div class="col-md-6">
@@ -32,7 +36,7 @@
                            <li><a href="{% url 'home:main' %}">Home</a></li>
                            <li><a href="about-us.html">About</a></li>
                            <li><a href="products.html">Products</a></li>
-                           <li><a href="contact-us.html">Contact</a></li>
+                           <li><a href="{% url 'home:contact' %}">Contact</a></li>
                        </ul>
                    </div>
                </div>
