--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -5,10 +5,9 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="subscribe-form">
-                        <span>Get in touch with us</span>
+                        <span>Get in touch with us:</span>
                         <form method="get" class="subscribeForm">
-                            <input id="subscribe" type="text" />
-                            <input type="submit" id="submitButton" />
+                            <button class="btn btn-primary">Activation of the notification system</button>
                         </form>
                     </div>
                 </div>
