--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -34,8 +34,8 @@
                    <div class="main-menu">
                        <ul>
                            <li><a href="{% url 'home:main' %}">Home</a></li>
-                           <li><a href="about-us.html">About</a></li>
-                           <li><a href="products.html">Products</a></li>
+                           <li><a href="{% url 'home:about-us' %}">About</a></li>
+                           <li><a href="products.html">Blogs</a></li>
                            <li><a href="{% url 'home:contact' %}">Contact</a></li>
                        </ul>
                    </div>
