--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -7,7 +7,7 @@
                    <div class="home-account">
                     {% if request.user.is_authenticated %}
                        <a href="#">My account</a>
-                       <i class="fa fa-bell" style="margin-right: 5px;"></i>
+                       <i class="fa fa-bell" style="margin-right: 10px;color: coral;"></i>
                        <a href="{% url 'account:logout' %}">Log out</a>
                     {% else %}
                     <a href="{% url 'account:sign-in' %}">sign-in</a>
