--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -8,9 +8,9 @@
                     {% if request.user.is_authenticated %}
                        <a href="#">My account</a>     
                        <div class="dropdown">
-                        <i class="fa fa-bell dropbtn" style="margin-right: 10px;color: coral;" onclick="myFunction()"></i>
+                        <i class="fa fa-bell dropbtn" style="margin-right: 5px;color: coral;" onclick="myFunction()"></i>
                         <div id="myDropdown" class="dropdown-content">
-                            <a >{{total}} unread messages</a>
+                            <p style="color: crimson;margin: 5px;">{{total}} unread messages</p>
                         {% for notif in notifications %}
                           <a href="" onclick="delete_public_notif({{notif.id}})">{{notif.message}} <span>{{notif.created_at}}</span></a>
                         {% endfor %}
