--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -47,7 +47,7 @@
                        <ul>
                            <li><a href="{% url 'home:main' %}">Home</a></li>
                            <li><a href="{% url 'home:about-us' %}">About</a></li>
-                           <li><a href="products.html">Blogs</a></li>
+                           <li><a href="{% url 'blog:blog-list' %}">Blogs</a></li>
                            <li><a href="{% url 'home:contact' %}">Contact</a></li>
                        </ul>
                    </div>
