--- a/blog/templates/blog/blog-tags.html
+++ b/blog/templates/blog/blog-tags.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 
 {% load static %}
-{% load social_share %}
 {% load hitcount_tags %}
 
 {% block title %}
@@ -15,125 +14,75 @@
 
 {% block main %}
 
-{% if request.resolver_match.url_name == 'tag-detail' %}
-<div class="iq-breadcrumb-one  iq-bg-over iq-over-dark-50"
-style="background-image: url({% static 'Theme/images/about-us/01.jpg' %});">
-<div class="container-fluid">
-    <div class="row align-items-center">
-        <div class="col-sm-12">
-            <nav aria-label="breadcrumb" class="text-center iq-breadcrumb-two">
-                <h2 class="title">{{tag.title}}</h2>
-                <ol class="breadcrumb main-bg">
-                    <li class="breadcrumb-item"><a href="{% url 'home:main' %}">خانه</a></li>
-                    <li class="breadcrumb-item"><a
-                        href="">برچسب ها</a>
-                    </li>
-                    <li class="breadcrumb-item"><a
-                        href="{% url 'blog:tag-detail' tag.slug %}">{{ tag.title }}</a>
-                    </li>
-                </ol>
-            </nav>
+<div id="heading">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="heading-content">
+                    <h2>{{tag.title}}</h2>
+                    <span><a href="{% url 'home:main' %}">Home</a> / <a
+                        href="{% url 'blog:tag-detail' tag.slug %}">{{ tag.title }}</a></span>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-</div>
-
-<section id="iq-upcoming-movie">
-    <div class="container-fluid">
-       <div class="row">
-          <div class="col-sm-12 overflow-hidden">
-             <div class="iq-main-header d-flex align-items-center justify-content-between">                        
-             </div>
-             <div class="upcoming-contens">
-                <ul class="favorites-slider list-inline row p-0 mb-0 iq-rtl-direction">
-                {% for blog in blogs %}
-                {% if blog %}
-                  <li class="slide-item">
-                      
-                      <div class="block-images position-relative">
-                         <div class="img-box">
-                            <img src="{{blog.image.url}}" class="img-fluid" alt="">
-                         </div>
-                         <div class="block-description">
-                            <h6 class="iq-title"><a href="{% url 'blog:blog-detail' blog.slug %}">{{blog.title}}</a></h6>
-                            <div class="movie-time d-flex align-items-center my-2 iq-ltr-direction">
-                               <div class="badge badge-secondary p-1 mr-2">{{blog.age}}+</div>
+ </div>
+ 
+ 
+ <div id="products-post">
+    <div class="container">
+        <div class="row" id="Container">
+          {% for blog in blogs %}
+            <div class="col-md-3 col-sm-6 mix portfolio-item Pizza">       
+                <div class="portfolio-wrapper">                
+                    <div class="portfolio-thumb">
+                        <img src="{{blog.image.url}}" alt="" />
+                        <div class="hover">
+                            <div class="hover-iner">
+                                <a class="fancybox" style="font-weight: 800;"><i class="fa fa-eye"></i> {% get_hit_count for blog %}+</a>
                             </div>
-                            <div class="hover-buttons">
-                               <a href="{% url 'blog:blog-detail' blog.slug %}" role="button" class="btn btn-hover iq-button">
-                               <i class="fa fa-book mr-1" aria-hidden="true"></i>
-                                مشاهده
-                               </a>
-                            </div>
-                         </div>
-
-                         <div class="block-social-info">
-                             <ul class="list-inline p-0 m-0 music-play-lists">
-                                <li class="share">
-                                   <span><i class="ri-share-fill"></i></span>
-                                   <div class="share-box">
-                                      <div class="d-flex align-items-center">
-                                        {% post_to_whatsapp blog.get_absolute_url '<i class="ri-whatsapp-fill"></i>' %}
-                                        {% post_to_facebook blog.get_absolute_url '<i class="ri-facebook-fill"></i>' %}
-                                        {% post_to_telegram '' blog.get_absolute_url '<i class="ri-telegram-fill"></i>' %}
-                                      </div>
-                                   </div>
-                                </li>
-                                        <li>
-                                                <span><i class="fa fa-eye"></i></span>
-                                                <span class="count-box">{% get_hit_count for blog %}+</span>
-                                        </li>
-                            <!-- <li>
-                                <span><i class="ri-heart-fill"></i></span>
-                                <span class="count-box">{{video.likes.all.count}}+</span>
-                            </li> -->
-                             </ul>
-                          </div>
-                      </div>
-                   </a>
-                </li>
-                {% else %}
-                <h4 class="main-title">محتوایی وجود ندارد</h4>
-                {% endif %}
-                {% endfor %}
-                </ul>
-             </div>
-          </div>
-       </div>
+                        </div>
+                    </div>  
+                    <div class="label-text">
+                        <h3><a href="{{blog.get_absolute_url}}">{{blog.title}}</a></h3>
+                        <span class="text-category"></span>
+                    </div>
+                </div>          
+            </div>
+          {% endfor %}
+        </div>
+ {% if page_obj.has_other_pages %}
+ 
+     <div class="mb-3 pagination">
+ 
+         {% if page_obj.has_previous %}
+             <a href="?page=
+ 
+                     {{ page_obj.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
+                class="mx-1" style="display: inline;"><i class="fa fa-chevron-left"></i></a>
+         {% endif %}
+ 
+         {% for page in page_obj.paginator.page_range %}
+             {% if page_obj.number == page %}
+                 <a href="?page={{ page }}" class="active mx-1" style="display: inline;">{{ page }}</a>
+             {% elif page > page_obj.number|add:'-3' and page < page_obj.number|add:'3' %}
+                 <a href="?page={{ page }}" class="mx-1" style="display: inline;">{{ page }}</a>
+             {% endif %}
+         {% endfor %}
+ 
+ 
+         {% if page_obj.has_next %}
+             <a href="?page=
+ 
+                     {{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
+                class="mx-1" style="display: inline;"><i class="fa fa-chevron-right"></i></a>
+         {% endif %}
+ 
+     </div>
+ 
+ {% endif %}
     </div>
- </section>
-
-
-
-<div class="d-flex align-items-center justify-content-center mb-3 pagination">
-
-    {% if blogs.has_other_pages %}
-
-        {% if blogs.has_previous %}
-            <a href="?page={{ blogs.previous_page_number }}" class="mx-1">
-                <i class="fa fa-chevron-right"></i>
-            </a>
-        {% endif %}
-
-        {% for page in blogs.paginator.page_range %}
-            {% if blogs.number == page %}
-                <a href="?page={{ page }}" class="active mx-1">{{ page }}</a>
-            {% elif page > blogs.number|add:'-3' and page < blogs.number|add:'3' %}
-                <a href="?page={{ page }}" class="mx-1">{{ page }}</a>
-            {% endif %}
-        {% endfor %}
-
-        {% if blogs.has_next %}
-            <a href="?page={{ blogs.next_page_number }}" class="mx-1">
-                <i class="fa fa-chevron-left"></i>
-            </a>
-        {% endif %}
-
-    {% endif %}
-
-</div>
-
-
-{% endif %}
+ </div>
+ 
 
 {% endblock %}
