--- a/blog/templates/blog/blog_search.html
+++ b/blog/templates/blog/blog_search.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="heading-content">
-                    <h2>Our BLogs</h2>
+                    <h2>search for: {{ request.GET.q }}</h2>
                     <span><a href="{% url 'home:main' %}">Home</a> /<a href="{% url 'blog:blog-list' %}">Blogs</a> / <a> search for: {{ request.GET.q }}</a></span>
                 </div>
             </div>
