--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -61,7 +61,7 @@
                                 <img src="{{blog.image.url}}" alt="blog-image" style="width: 50px;height: 50px;">
                             </div>
                             <div class="recent-post-info">
-                                <h6><a href="#">{{blog.title}}</a></h6>
+                                <h6><a href="{% url 'blog:blog-detail' blog.slug %}">{{blog.title}}</a></h6>
                                 <span>{{blog.created_at}}</span>
                             </div>
                         </div>
