add comment part

--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -53,7 +53,7 @@
                                             <img src="{{ blog.image.url }}" alt="">
                                         </div>
                                     </div>
-                                    <div class="product-content">
+                                    <div class="product-content" id="scroll">
                                         <div class="product-title">
                                             <h3>{{blog.title}}</h3>
                                             <span class="subtitle">{{blog.author.full_name}}</span>
@@ -65,65 +65,8 @@
                                     </div>
                                     <div class="comments-title">
                                         <div class="comment-section">
-                                            <h4>4 comments</h4>
+                                            <h4>comments: {{blog.comments.all.count}}</h4>
                                         </div>
-                                    </div>
-                                    <div class="all-comments">
-                                        <div class="view-comments">
-                                            <div class="comments">
-                                                <div class="author-thumb">
-                                                    <img src="images/author-comment1.jpg" alt="">
-                                                </div>
-                                                <div class="comment-body">
-                                                    <h6>Cindy Venna</h6>
-                                                    <span class="date">11 Sep 2084 - 12:25 PM</span>
-                                                    <a href="#" class="hidden-xs">Reply</a>
-                                                    <p>Nulla ac elementum nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam erat volutpat. Donec rhoncus quam sit amet sodales finibus. Donec pellentesque non massa eu maximus. In non tellus id sem tempor gravida.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="replyed-form">
-                                            <div class="comments replyed">
-                                                <div class="author-thumb">
-                                                    <img src="images/author-comment2.jpg" alt="">
-                                                </div>
-                                                <div class="comment-body">
-                                                    <h6>George Tanya</h6>
-                                                    <span class="date">12 Sep 2084 - 8:48 AM</span>
-                                                    <a href="#" class="hidden-xs">Reply</a>
-                                                    <p>In pulvinar venenatis odio. Sed in ex sit amet ipsum posuere mollis. Nam nec risus feugiat dui ultrices dignissim. Morbi ex purus, commodo a tristique eu, mollis a nisi. Pellentesque in enim sit amet tellus ornare fringilla eget eu arcu.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="view-comments">
-                                            <div class="comments">
-                                                <div class="author-thumb">
-                                                    <img src="images/author-comment3.jpg" alt="">
-                                                </div>
-                                                <div class="comment-body">
-                                                    <h6>Brooker Aung</h6>
-                                                    <span class="date">12 Sep 2084 - 10:40 AM</span>
-                                                    <a href="#" class="hidden-xs">Reply</a>
-                                                    <p>Duis rutrum, libero eu blandit gravida, massa orci cursus nisi, vehicula facilisis purus neque dignissim urna. Etiam molestie elementum elit at tempus. Suspendisse quis consectetur nisi, vitae consequat sem. In et quam id libero venenatis venenatis. Morbi vitae justo vulputate, auctor augue eu, pulvinar augue.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="view-comments">
-                                            <div class="comments">
-                                                <div class="author-thumb">
-                                                    <img src="images/author-comment4.jpg" alt="">
-                                                </div>
-                                                <div class="comment-body">
-                                                    <h6>Crystal Mya</h6>
-                                                    <span class="date">14 Sep 2084 - 05:16 PM</span>
-                                                    <a href="#" class="hidden-xs">Reply</a>
-                                                    <p>Suspendisse vitae maximus nisl, non finibus ante. Suspendisse neque nisl, luctus ullamcorper erat a, fermentum mollis nibh. Aliquam vulputate augue vel metus suscipit euismod. Quisque id purus massa. Sed condimentum facilisis eros, ultrices tincidunt libero facilisis eget. Integer eget cursus velit.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="divide-line">
-                                    <img src="images/div-line.png" alt="" />
                                     </div>
                                 <div class="leave-comment">
                                     <div class="leave-one">
@@ -131,27 +74,91 @@
                                     </div>
                                 </div>
                                 <div class="leave-form">
+                                    {% if request.user.is_authenticated %}
                                     <form action="#" method="post" class="leave-comment">
                                         <div class="row">
-                                        <div class="name col-md-4">
-                                            <input type="text" name="name" id="name" placeholder="Name" />
-                                        </div>
-                                        <div class="email col-md-4">
-                                            <input type="text" name="email" id="email" placeholder="Email" />
-                                        </div>
-                                        <div class="subject col-md-4">
-                                            <input type="text" name="subject" id="subject" placeholder="Subject" />
-                                        </div>
-                                        </div>
-                                        <div class="row">        
-                                            <div class="text col-md-12">
-                                                <textarea name="text" placeholder="Comment"></textarea>
-                                            </div>   
-                                        </div>                              
-                                        <div class="send">
-                                            <button type="submit">Send</button>
-                                        </div>
+                                            {% csrf_token %}
+                                            <textarea name="body" aria-required="true" id="get_fullname" placeholder="enter your message:" required ></textarea></div>
+                                            <p class="form-submit">
+                                                <button name="submit" type="submit" id="submit" class="btn btn-primary" value="Post Comment">
+                                                    <span class="iq-btn-text-holder">Send</span>
+                                                </button>
+                                                <input id="parent_id" name="parent_id" type="hidden">
+                                                <input id="sender" name="sender" type="hidden">
+                                                <input id="receiver" name="receiver" type="hidden">
                                     </form>
+                                    <div onclick="CanselButton()" id="cansel_button" style="margin-left: 5px;margin-top: 5px; "></div>
+                                    {% else %}
+                                    <a  class="comment-reply-title btn btn-danger h3" href="{% url 'account:sign-in' %}">Log in first to post a comment</a>
+                                    {% endif %}
+                                </div>
+                                <div class="divide-line">
+                                    <img src="{% static 'images/div-line.png' %}" alt="" />
+                                </div>
+                                <div class="all-comments">
+                                    <div class="view-comments">
+                                        {% for comment in comments %}
+                                            {% if comment.parent == None %}
+                                        <div class="comments">
+                                            <div class="author-thumb">
+                                                {% if comment.user.image %}
+                                                <img src="{{ comment.user.image.url }}" alt="" style="border-radius: 50%;width: 50px;height: 50px;">
+                                                {% else %}
+                                                        <img src="{% static 'images/user.png' %}"
+                                                             alt="user"
+                                                             class="" style="border-radius: 50%;width: 50px;height: 50px;">
+                                                {% endif %}
+                                            </div>
+                                            <div class="comment-body">
+                                                <h6>{{ comment.user.full_name }}</h6>
+                                                {% if request.user == comment.user %}
+                                                <div style="position:relative;right: 0px;"> <a onclick="RemoveComment({{ comment.id }})" style="background-color: transparent;margin-bottom: 10px;" class="a">
+                                                    <i class="fa fa-warning text-danger mr-4"></i>    
+                                                </a></div>
+                                               
+                                                {% endif %}
+                                                <span class="date">{{ comment.created_at|naturaltime }}</span>
+                                                {% if request.user.is_authenticated %}
+                                                <a  class="hidden-xs" onclick="reply('{{ comment.id }}', '{{ request.user.id }}', '{{ comment.user.id }}','{{ comment.user.full_name }}')">Reply</a>
+                                                {% endif %}
+                                                <p>{{ comment.body }}</p>
+                                            </div>
+                                        </div>
+                                        {% endif %}
+                                        {% for reply in comment.replies.all %}
+                                        <div class="replyed-form">
+                                            <div class="comments replyed">
+                                                <div class="author-thumb">
+                                                    {% if reply.user.image %}
+                                                    <img src="{{ reply.user.image.url }}"
+                                                         alt="user"
+                                                         class="" style="border-radius: 50%;width: 50px;height: 50px;">
+                                                {% else %}
+                                                    <img src="{% static 'images/user.png' %}"
+                                                         alt="user"
+                                                         class="" style="border-radius: 50%;width: 50px;height: 50px;">
+                                                {% endif %}
+                                                </div>
+                                                <div class="comment-body">
+                                                    <h6>{{ reply.user.full_name }}</h6>
+                                                    {% if request.user == reply.user %}
+
+
+
+                                                        <a onclick="RemoveComment({{ reply.id }})" style="background-color: transparent;margin-bottom: 10px;" class="a">
+                                                            <i class="fa fa-warning text-danger mr-4"></i>    
+                                                        </a>
+
+                                                        {% endif %}
+                                                    <span class="date">{{ reply.created_at|naturaltime }}</span>
+                                                    <p>{{ reply.body }}</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        {% endfor %}
+                                        {% endfor %}
+                                    </div>
+
                                 </div>
                             </div>
                             <div class="col-md-3 col-md-offset-1">
