--- a/templates/includes/scripts.html
+++ b/templates/includes/scripts.html
@@ -4,3 +4,62 @@
 <script src="{% static 'js/vendor/jquery.gmap3.min.js' %}"></script>
 <script src="{% static 'js/plugins.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+
+function reply(id, pk1, pk2, full_name) {
+
+document.getElementById("parent_id").value = id;
+document.getElementById("sender").value = pk1;
+document.getElementById("receiver").value = pk2;
+var MySection = document.getElementById("scroll");
+MySection.scrollIntoView({block: 'start', behavior: 'smooth', inline: 'start'});
+document.getElementById("get_fullname").placeholder = `  reply to ${full_name}`;
+var div = document.getElementById("cansel_button");
+var button = document.createElement('BUTTON');
+var text = document.createTextNode("Cancel");
+button.className = "btn btn-success"
+button.id = 'button';
+button.appendChild(text);
+
+if (!document.getElementById('button')) {
+    div.appendChild(button);
+}
+}
+
+function CanselButton() {
+var button = document.getElementById('button');
+button.parentNode.removeChild(button);
+document.getElementById("parent_id").value = null;
+document.getElementById("get_fullname").placeholder = "enter your message";
+}
+function RemoveComment(id) {
+        Swal.fire({
+            title: 'Warning!!',
+            text: 'Are you sure to delete?',
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            cancelButtonText: 'No',
+            confirmButtonText: 'Yes',
+
+        }).then((result) => {
+            if (result.isConfirmed) {
+                $.get(`/remove/${id}`).then(response => {
+                    Swal.fire({
+                        text: 'Delete Done',
+                        icon: 'success',
+                        confirmButtonText: 'Ok',
+                        confirmButtonColor: '#112031',
+                    }).then(function () {
+                        location.reload();
+                    })
+
+                })
+            }
+
+        })
+    }
+
+</script>
