--- a/templates/includes/scripts.html
+++ b/templates/includes/scripts.html
@@ -62,4 +62,37 @@ function RemoveComment(id) {
         })
     }
 
+
+    function favorite(id) {
+        var element = document.getElementById('favorite')
+        $.get(`/add-favorite/${id}`).then(response => {
+            if (response["response"] === "added") {
+                element.className = 'fa fa-bookmark'
+                Swal.fire({
+                    position: 'top-end-right',
+                    icon: 'success',
+                    text: 'This blog add to your favorites.',
+                    showConfirmButton: false,
+                    confirmButtonColor: '#112031',
+                    timer: 1500
+                })
+
+            } else {
+                element.className = 'fa fa-bookmark-o'
+            }
+        })
+    }
+
+
+    function Warning() {
+    Swal.fire({
+        position: 'top-end-right',
+        icon: 'warning',
+        text: "Please sign-in first.",
+        confirmButtonText: 'ok',
+        confirmButtonColor: '#112031',
+    }).then(function () {
+        location.href = "{% url 'account:sign-in' %}";
+    })
+}
 </script>
